removed padding above toolbar and  map. added padding back on user guide, about and home page to give space below nav bar. centered tool bar items, fixed quick links selection section padding.

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -288,6 +288,7 @@
   border-radius: 0.25rem;
 }
 
+// This moves the selection name below the tool bar when clicking on secion links in dropdown on right
 .anchor-offset {
   scroll-margin-top: 8vh; /* position anchor below nav  */
 }
