--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, "Community Summaries"
 
-.container-xl
+.container-xl.mt-4
   .row.justify-content-center.mb-5
     .col
       #community-data-hero.position-relative.text-center.rounded-4.p-0.p-md-3.p-lg-5
