--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, "About"
 
-.container
+.container.mt-4
   %h2.fw-bold About
   %p.lead.text-muted.mb-4
     The Alaska Energy Data Gateway combines community, socio-economic, and energy data into data dashboards, tools, and new datasets to meet Alaska’s energy data needs.
