--- a/app/views/static_pages/user_guide.html.haml
+++ b/app/views/static_pages/user_guide.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, "User Guide"
 
-.container
+.container.mt-4
   %h2.fw-bold User Guide
   %p.lead.text-muted.mb-4
     Find energy and socioeconomic data for communities across the state of Alaska in the revitalized Alaska Energy Data Gateway
