--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -1,6 +1,6 @@
 - content_for :title, "Data Explorer"
 
-.container-xl
+.container-xl.mt-4
   .row.justify-content-center.mb-5
     .col
       #explore-data-hero.position-relative.text-center.rounded-4.p-0.p-md-3.p-lg-5
