--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,4 @@
-.container-fluid.hero-gradient.mt-n3.mt-sm-n5
+.container-fluid.hero-gradient
   = render 'home_hero'
 
 .container.py-5.text-center
