Add map support for geojson point layer, add unified hover tooltip logic, refactor into smaller functions, display community locations on grid view

--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -7,13 +7,11 @@
       .col.text-truncate
         %i.bi.bi-geo-alt-fill.text-primary.fs-4.me-1
         %span.fw-bold.fs-2.fs-md-4.text-truncate{ style: "max-width:100%;" }= @community.name
-        %span.text-muted.mx-2 •
+        %span.text-muted.fs-4.mx-2 •
         %span.fw-semibold.text-secondary.text-truncate{ style: "max-width:30ch;" }= @borough.name
-        %span.fw-semibold.text-secondary.mt-2
-          = @borough.name
-          - if @community.grid.present?
-            %span.text-muted.fs-4.mx-2 &bull;
-            = link_to @community.grid.name, grid_path(@community.grid), class: "text-info"
+        - if @community.grid.present?
+          %span.text-muted.fs-4.mx-2 •
+          = link_to @community.grid.name, grid_path(@community.grid), class: "text-info"
 
       / RIGHT: two dropdowns, side-by-side, never wrap
       .col-auto
