--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -3,7 +3,7 @@
 .sticky-top.bg-light.p-1
   .row.align-items-center.gx-0
     .col.d-flex.align-items-center.text-truncate.align-middle.gap-2
-      %i.bi.bi-geo-alt-fill.text-primary.fs-4
+      %i.bi.bi-geo-alt-fill.text-primary.fs-4.ms-2
       %span.fw-bold.fs-3.text-truncate= @community.name
       %span.text-muted.align-middle &bull;
       %span.fw-semibold.text-secondary.text-truncate= @borough.name
