--- a/app/views/grids/sections/_communities.html.haml
+++ b/app/views/grids/sections/_communities.html.haml
@@ -1,5 +1,4 @@
-- cols = @grid.communities.in_groups(4, false)
-%div{
+.my-5.mx-3.mx-md-5.mt-3{
   data: {
     controller: "maps-bridge",
     "maps-bridge-default-layer-url-value": community_locations_grid_maps_path(@grid, format: :json)
@@ -7,16 +6,17 @@
 }
   #communities.anchor-offset{ data: { "maps-bridge-target": "trigger" } }
 
-.container.mb-3.my-5.mx-3.mx-md-5.mt-3
   .row.g-3
-    %p
-      The
-      %strong= @grid.name
-      = " serves #{pluralize(@grid.communities.size, 'community')}:"
-  .row.g-3
-    - cols.each do |group|
-      .col-12.col-md-3
-        %ul.list-group.list-group-flush.small
-          - group.each do |c|
-            %li.list-group-item.py-2
-              = link_to c.name, community_path(c), class: "text-decoration-none stretched-link"
+    .col-12
+      %p.mb-3
+        The
+        %strong= @grid.name
+        = " serves #{pluralize(@grid.communities.size, 'community')}:"
+
+  / Responsive columns: 1 / 2 / 3 / 4 per row
+  .row.row-cols-1.row-cols-sm-2.row-cols-md-3.row-cols-lg-4.g-3
+    - @grid.communities.each do |c|
+      .col
+        %a.list-group-item.text-truncate.text-primary{
+          href: community_path(c),style: "max-width:100%;"
+        }= c.name
