--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -6,7 +6,7 @@
       "data-bs-toggle" => "dropdown",
       "aria-expanded" => "false"
     }
-      Select Section
+      Jump To
     %ul.dropdown-menu{ "aria-labelledby" => "quickNavDropdown" }
       // Electricity Section
       - if @community.show_electricity_section?
