--- a/app/views/grids/sections/_quick_nav.html.haml
+++ b/app/views/grids/sections/_quick_nav.html.haml
@@ -6,7 +6,7 @@
       "data-bs-toggle" => "dropdown",
       "aria-expanded" => "false"
     }
-      Select Section
+      Jump To
     %ul.dropdown-menu.w-100.p-1{ "aria-labelledby" => "quickNavDropdown" }
       // Electricity Section
       - if @grid.communities.exists?
