Update dropdowns prompt from current community/grid name to Select a Community/Grid

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -16,4 +16,4 @@
               %br
               .row.justify-content-center
                 .col.col-lg-10
-                  = render "shared/dropdown", collection: @communities, current: nil
+                  = render "shared/dropdown", collection: @communities
