--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -13,7 +13,7 @@
 
     .col-auto
       .d-flex.align-items-center.flex-nowrap
-        = render "shared/dropdown", collection: @communities, current: @community
+        = render "shared/dropdown", collection: @communities
         = render 'communities/sections/quick_nav', community: @community
 
 .row.gx-0
