--- a/app/views/grids/show.html.haml
+++ b/app/views/grids/show.html.haml
@@ -8,7 +8,7 @@
 
     .col-auto
       .d-flex.align-items-center.flex-nowrap
-        = render "shared/dropdown", collection: @grids, current: @grid
+        = render "shared/dropdown", collection: @grids
         = render 'grids/sections/quick_nav', grid: @grid
 
 .row.gx-0
