Display service area geoms on grid summary

--- a/app/views/grids/sections/_electricity.html.haml
+++ b/app/views/grids/sections/_electricity.html.haml
@@ -1,5 +1,8 @@
-- if @grid.show_production?
+- if @grid.show_utilities?
   .my-5.mx-3.mx-md-5.mt-3
+    = render 'grids/sections/electricity/utilities'
+- if @grid.show_production?
+  .my-5.mx-3.mx-md-5
     = render 'grids/sections/electricity/production'
 - if @grid.show_capacity?
   .my-5.mx-3.mx-md-5
