--- a/app/views/grids/sections/_quick_nav.html.haml
+++ b/app/views/grids/sections/_quick_nav.html.haml
@@ -13,6 +13,8 @@
         %li= nav_link "Communities", "#communities", parent_section: true
       - if @grid.show_electricity_section?
         %li= nav_link "Electricity", "#electricity", parent_section: true
+      - if @grid.show_utilities?
+        %li= nav_link "Utilities", "#utilities"
       - if @grid.show_production?
         %li= nav_link "Production", "#production"
       - if @grid.show_capacity?
