hid map on small screens like phones, should show on tablets, hide map buttons on right side as well

--- a/app/views/communities/sections/electricity/_utilities.html.haml
+++ b/app/views/communities/sections/electricity/_utilities.html.haml
@@ -13,7 +13,7 @@
     
   / Map
   - if @community.show_utility_map_layers?
-    .mb-3
+    .mb-3.d-none.d-md-block
       %h6.text-uppercase.text-muted.mb-2 View on Map
       .btn-group.btn-group-sm{ role: "group", "aria-label": "Map layers" }
         - if @community.show_service_area_geoms?
