--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -19,7 +19,7 @@
 
 .row.gx-0
   / --- LEFT: Map
-  .col-md-5
+  .col-md-5.d-none.d-md-block
     .d-flex.flex-column{ style: "position: sticky; top: 50px; height: calc(100vh - 50px);" }
       .flex-grow-1.d-flex.flex-column#mapbox-area{
         data: mapbox_api_data({
